--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,3 +5,16 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
+
+.homeleft {
+  float: left;
+  width: 300px;
+  height: 300px;
+  // background: #bfbfbf;
+}
+
+.homeright {
+  margin-left: 310px;
+  height: 300px;
+  // background: #efefef;
+}
