--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,14 +7,15 @@
   "minima/initialize";
 
 .homeleft {
+  text-align: center;
   float: left;
-  width: 300px;
+  width: 40%;
   height: 300px;
   // background: #bfbfbf;
 }
 
 .homeright {
-  margin-left: 310px;
+  margin-left: 45%;
   height: 300px;
   // background: #efefef;
 }
