--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -10,12 +10,12 @@
   text-align: center;
   float: left;
   width: 40%;
-  height: 300px;
+  height: auto;
   // background: #bfbfbf;
 }
 
 .homeright {
   margin-left: 45%;
-  height: 300px;
+  height: auto;
   // background: #efefef;
 }
