--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -11,11 +11,13 @@
   float: left;
   width: 40%;
   height: 30%;
+  margin-bottom: 20%;
   // background: #bfbfbf;
 }
 
 .homeright {
   margin-left: 45%;
   height: 30%;
+  margin-bottom: 20%;
   // background: #efefef;
 }
