--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -279,3 +279,24 @@ table {
             -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 }
+
+.social-media-list {
+  display: table;
+  margin: 0 auto;
+  li {
+    float: left;
+    margin: 5px 10px 5px 0;
+    &:last-of-type { margin-right: 0 }
+    a {
+      display: block;
+      padding: 10px 12px;
+      border: 1px solid $border-color-01;
+      &:hover { 
+        border-color: $border-color-02;
+        .svg-icon {
+          color: $link-hover-color;
+        }
+      }
+    }
+  }
+}
